[package]
name = "etcddata"
version = "0.1.0"
authors = ["zzzdong <kuwater@163.coms>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
sled = "0.34"
structopt = "0.3"
etcdv3client = { git="https://github.com/zzzdong/etcdv3client-rust.git" }
tokio = { version="0.2", features=["full"] }

[profile.release]
lto = true
panic = "abort"
