[package]
name = "etcddata"
version = "0.2.0"
authors = ["zzzdong <kuwater@163.coms>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
sled = "0.34"
clap = { version="3.2", features=["derive"] }
etcdv3client = "0.2.2"
tokio = { version="1.18", features=["full"] }

[profile.release]
lto = true
panic = "abort"
